--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +21,7 @@
     root.render(heading);
 
 </script>-->
-<Script src="./App.js"></Script>
+<Script  type="module" src="./App.js"></Script>
      
 </body>
 </html>
